@@ -59,47 +59,53 @@ def videos():
 	addDir('BoaFoda.com','-',500,artfolder + 'boaf.png')
 	xbmc.executebuiltin("Container.SetViewMode(500)")
 	
+def _ch(name):
+	if selfAddon.getSetting(name) == "true":
+		return True
+	return False
+	
 def canais():
 	if entra_canais == "true": addDir(traducao(2004),'-',0,artfolder + 'menu.png')
-	addDir("Brazzers TV",'-',4,artfolder + "brazzers.png",False)
-	addDir("Brasileirinhas",'-',5,artfolder + "brasileirinhas.png",False)
-	addDir("SexyHot",'-',6,artfolder + "sexyhot.png",False)
-	addDir("Playboy TV",'-',7,artfolder + "playboy.png",False)
-	addDir("Playboy TV Chat",'-',8,artfolder + "playboyhd.png",False)
-	addDir("Penthouse HD",'-',9,artfolder + "penthouse.png",False)
-	#addDir("Hot",'-',10,artfolder + "hot.png",False)
-	addDir("Hustler HD",'-',11,artfolder + "hustlerhd.png",False)
-	addDir("Viki Enjoy Premium",'-',12,artfolder + "viki.png",False)
-	addDir("Viet Sex TV",'-',13,artfolder + "vietsextv.png",False)
-	addDir("Bella Club",'-',14,artfolder + "bellaclub.png",False)
-	addDir("Bella Club 2",'-',15,artfolder + "bellaclub2.png",False)
-	addDir("ButGO",'-',16,artfolder + "butgo.png",False)
-	addDir("Filthon Adult",'-',17,artfolder + "filthon.png",False)
-	addDir("Filthon Adult Fetish",'-',18,artfolder + "filthonfetish.png",False)
-	addDir("XXL",'-',19,artfolder + "xxl.png",False)
-	addDir("Frenchlover",'-',20,artfolder + "frenchlover.png",False)
-	addDir("Dorcel TV",'-',23,artfolder + "dorceltv.png",False)
-	addDir("iPure TV",'-',24,artfolder + "ipuretv.png",False)
-	addDir("Private",'-',25,artfolder + "private.png",False)
-	addDir("Private Gold",'-',26,artfolder + "privategold.png",False)
-	addDir("Venus",'-',27,artfolder + "venus.png",False)
-	#addDir("xDesire",'-',28,artfolder + "xdesire.png",False)
-	#addDir("Blue Hustler",'-',29,artfolder + "hustlerblue.png",False)
-	addDir("O-la-la",'-',30,artfolder + "olala.png",False)
-	#addDir("Ero XXX",'-',31,artfolder + "eroxxx.png",False)
-	addDir("Amateri TV",'-',32,artfolder + "amateritv.png",False)
-	addDir("Russian Nights",'-',33,artfolder + "russiannights.png",False)
-	addDir("Hustler TV",'-',34,artfolder + "hustlertv.png",False)
-	addDir("Sexzone HD",'-',35,artfolder + "sexzonehd.png",False)
-	addDir("Redlight HD",'-',36,artfolder + "redlighthd.png",False)
-	addDir("Hallo TV",'-',37,artfolder + "hallotv.png",False)
-	addDir("Platinum TV",'-',38,artfolder + "platinumtv.png",False)
-	addDir("Sexprive Brasileirinhas",'-',40,artfolder + "sexprive.png",False)
-	addDir("Nightclub TV",'-',41,artfolder + "nightclub.png",False)
-	addDir("Temptation TV",'-',42,artfolder + "temptationtv.png",False)
+	
+	if _ch('brazzerstv'): addDir("Brazzers TV",'-',4,artfolder + "brazzers.png",False)
+	if _ch('brasileirinhas'): addDir("Brasileirinhas",'-',5,artfolder + "brasileirinhas.png",False)
+	if _ch('sexyhot'): addDir("SexyHot",'-',6,artfolder + "sexyhot.png",False)
+	if _ch('pboytv'): addDir("Playboy TV",'-',7,artfolder + "playboy.png",False)
+	if _ch('pboytvchat'): addDir("Playboy TV Chat",'-',8,artfolder + "playboyhd.png",False)
+	if _ch('penthousehd'): addDir("Penthouse HD",'-',9,artfolder + "penthouse.png",False)
+	#if _ch('hot'): addDir("Hot",'-',10,artfolder + "hot.png",False)
+	if _ch('hustlerhd'): addDir("Hustler HD",'-',11,artfolder + "hustlerhd.png",False)
+	if _ch('viki'): addDir("Viki Enjoy Premium",'-',12,artfolder + "viki.png",False)
+	if _ch('vietsex'): addDir("Viet Sex TV",'-',13,artfolder + "vietsextv.png",False)
+	if _ch('bella'): addDir("Bella Club",'-',14,artfolder + "bellaclub.png",False)
+	if _ch('bella2'): addDir("Bella Club 2",'-',15,artfolder + "bellaclub2.png",False)
+	if _ch('butgo'): addDir("ButGO",'-',16,artfolder + "butgo.png",False)
+	if _ch('filthon-adult'): addDir("Filthon Adult",'-',17,artfolder + "filthon.png",False)
+	if _ch('filthon-adult-fetish'): addDir("Filthon Adult Fetish",'-',18,artfolder + "filthonfetish.png",False)
+	if _ch('xxl'): addDir("XXL",'-',19,artfolder + "xxl.png",False)
+	if _ch('frenchlover'): addDir("Frenchlover",'-',20,artfolder + "frenchlover.png",False)
+	if _ch('dorceltv'): addDir("Dorcel TV",'-',23,artfolder + "dorceltv.png",False)
+	if _ch('ipure'): addDir("iPure TV",'-',24,artfolder + "ipuretv.png",False)
+	if _ch('private'): addDir("Private",'-',25,artfolder + "private.png",False)
+	if _ch('privategold'): addDir("Private Gold",'-',26,artfolder + "privategold.png",False)
+	if _ch('venus'): addDir("Venus",'-',27,artfolder + "venus.png",False)
+	#if _ch('xdesire'): addDir("xDesire",'-',28,artfolder + "xdesire.png",False)
+	#if _ch('blue-hustler'): addDir("Blue Hustler",'-',29,artfolder + "hustlerblue.png",False)
+	if _ch('olala'): addDir("O-la-la",'-',30,artfolder + "olala.png",False)
+	#if _ch('eroxxx'): addDir("Ero XXX",'-',31,artfolder + "eroxxx.png",False)
+	if _ch('amateritv'): addDir("Amateri TV",'-',32,artfolder + "amateritv.png",False)
+	if _ch('russian-nights'): addDir("Russian Nights",'-',33,artfolder + "russiannights.png",False)
+	if _ch('hustlertv'): addDir("Hustler TV",'-',34,artfolder + "hustlertv.png",False)
+	if _ch('sexzonehd'): addDir("Sexzone HD",'-',35,artfolder + "sexzonehd.png",False)
+	if _ch('redlighthd'): addDir("Redlight HD",'-',36,artfolder + "redlighthd.png",False)
+	if _ch('hallotv'): addDir("Hallo TV",'-',37,artfolder + "hallotv.png",False)
+	if _ch('platinumtv'): addDir("Platinum TV",'-',38,artfolder + "platinumtv.png",False)
+	if _ch('sexprive'): addDir("Sexprive Brasileirinhas",'-',40,artfolder + "sexprive.png",False)
+	if _ch('nightclub'): addDir("Nightclub TV",'-',41,artfolder + "nightclub.png",False)
+	if _ch('temptation'): addDir("Temptation TV",'-',42,artfolder + "temptationtv.png",False)
 	if selfAddon.getSetting('gay') == 'false':
 		#Conteúdo gay
-		addDir("Filthon Gay",'-',39,artfolder + "filthongay.png",False)
+		if _ch('filthon-gay'): addDir("Filthon Gay",'-',39,artfolder + "filthongay.png",False)
 	xbmc.executebuiltin("Container.SetViewMode(500)")
 
 
